dataengines/weather: Reset wind info when parsing new data (envcan)

BUG: 481492


(cherry picked from commit d21d57ad326761a5d25f9825335aa68f14c2fa9d)